<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.misk.camelstep.camelstep.welcomeActivity">


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/logobar"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_height="@android:dimen/app_icon_size">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/camelsteplogo"
            android:contentDescription="@string/app_logo"
            android:id="@+id/logo"/>

  </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/morebtn"
        android:layout_below="@+id/logobar"
        android:weightSum="10.3">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            app:srcCompat="@drawable/camelstep"
            android:id="@+id/panner"
            android:contentDescription="@string/app_panner"
            />

        <TextView
            android:text="@string/com_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/brand"
            android:layout_weight="1.3"
            android:textStyle="bold"
            android:textSize="@android:dimen/app_icon_size"
            android:layout_gravity="center_horizontal|center" />
        <TextView
            android:text="@string/app_slg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/about"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/info1"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <ImageView
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_map"
                android:id="@+id/map"
                android:contentDescription="@string/com_address"
                android:tint="@android:color/holo_blue_dark"
                android:layout_marginEnd="10dp" />

            <TextView
                android:text="@string/com_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:layout_weight="3" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/info2"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">


            <ImageView
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/stat_sys_phone_call"
                android:id="@+id/phone"
                android:contentDescription="@string/app_phone"
                android:tint="@android:color/holo_blue_dark"
                android:layout_marginEnd="25dp" />

            <TextView
                android:text="@string/app_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/phonenumber"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/info3"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <ImageView
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_Email"
                app:srcCompat="@android:drawable/ic_dialog_email"
                android:id="@+id/mail"
                android:tint="@android:color/holo_blue_dark"
                android:layout_marginEnd="10dp" />

            <TextView
                android:text="@string/app_Email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/mailtext"
                android:layout_weight="3" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/btn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/morebtn"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/background_light"
        android:padding="10dp" />
</RelativeLayout>
